style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    height: 100%;
    width: 100%;
}

body {
    font-family: 'Poppins';
    font-style: normal;
}

.small-title {
    font-weight: 700;
    font-size: 23px;
    line-height: 135%;
    letter-spacing: -0.005em;
    color: #000000;
}

.small-text {
    font-weight: 400;
    font-size: 15px;
    line-height: 29px;
    color: #000000;
}

.title {
    font-weight: 700;
    font-size: 50px;
    line-height: 159.5%;
    letter-spacing: -0.005em;
    color: #000000;
}

.hud-base-color {
    color: #051826;
}

.hud-base-bg-color {
    background: #051826;
}

.hud-green-color {
    color: #CDFF1A;
}

.hud-green-bg-color {
    background: #CDFF1A;
}

.hud-blue-color {
    background: #1F263B;
}

.hud-white-color {
    color: #F5F8FF;
}

.hud-white-bg-color {
    background: #F5F8FF;
}

.drop-shadow {
    box-shadow: -12px 22px 35px 7px #0000001F;
}

/* Section: Home */

section#home {
    min-height: 1000px;
}

.js-navbar-bg {
    background-color: #1a25398c;
}

/* TODO: split in two classes: URL and background cover */
.bg-home-img {
    background-image: url('img/hero.png');
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
}

.card-bg-img {
    background-image: url('img/method-frame.png');
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
}

.bg-about-gradient {
    /* background: linear-gradient(180deg, #FFFFFF 51.36%, #E1FF76 56.41%, #DAFF54 58.32%, #D2FF33 62.42%, #CDFF1A 67.47%, #D8FF4E 76.89%, #E4FF82 79.76%, #FFFFFF 84.81%); */
    background: linear-gradient(180deg, #FFFFFF, #E1FF76, #DAFF54, #D2FF33, #CDFF1A, #D8FF4E, #E4FF82, #FFFFFF);
}

.bg-about-img {
    min-height: inherit;
    background-image: url('img/about.png');
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
}

.card-rounded {
    /* background: #051826; */
    border-radius: 40px 40px 40px 0px !important;
}

.card-rounded-top {
    /* background: #051826; */
    border-radius: 40px 40px 0px 0px !important;
}

.card-rounded-bottom {
    background: #F5F5F5;
    border-radius: 0px 0px 40px 0px !important;
}


/* Section: Methods */

section#methods .card-body {
    padding: 38px;
}

section#methods hr {
    background: #f5f5f5;
    width: 50px;
    height: 4px;
    opacity: 1 !important;
}


/* Section: Team */

section#team p {
    font-weight: 500;
    font-size: 20px;
    line-height: 180%;
    letter-spacing: 0.01em;
}


.z-index-up {
    z-index: 2;
}


/* Section: Success Stories */

section#sucess-stories {
    margin-bottom: 10rem;
}

.drop-shadow-carousel {
    box-shadow: 0px 0px 103px 0px #00000040;
}

.border-carousel {
    background: #D9D9D9;
    border-radius: 75px;
}

.height-carousel {
    height: 30vh;
}

/* Section: Hallmark */

section#hallmark {
    padding: 5rem 0 5rem 0;
}

section#hallmark h3 {
    line-height: 77px;
    letter-spacing: -0.005em;
}

section#hallmark .card {
    height: 21vh;
    background-color: #EAEAEA;
    border: none;
}

@media only screen and (min-width: 768px){
    section#hallmark .card {
        height: 25vh;
    }
}

@media only screen and (min-width: 1200px){
    section#hallmark .card {
        height: 28vh;
    }
}

section#hallmark .card-body {
    padding-left: 2rem;
    padding-right: 2rem;
}

.hallmark-div {
    height: 60%;
    /* padding-top: 5rem; */
    /* padding-bottom: 5rem; */
}

.hallmark-card {
    border-radius: 30px;
}

.hallmark-title {
    font-weight: 700;
    font-size: 45px;
    line-height: 172%;
    letter-spacing: -0.005em;
}

.hallmark-card-title {
    font-size: 25px;
    font-weight: 700;
    line-height: 34px;
    letter-spacing: -0.005em;
}

.hallmark-card-paragraph {
    font-size: 15px;
    /* font-size: 17px; */ /* Sugestão*/
    font-weight: 400;
    line-height: 30px;
    letter-spacing: 0em;
}

.hallmark-card-hr {
    width: 50px;
    height: 4px;
}

.hallmark-paragraph {
    font-weight: 500;
    font-size: 30px;
    line-height: 214%;
    letter-spacing: -0.005em;
}

.hallmark-rectangle {
    /* Rectangle 52 */
    /* width: 420px; */
    height: 80px;
    /* Verde Hud */
    border-radius: 52px;
    filter: blur(45px);
}

.hallmark-btn {
    /* Rectangle 52 */
    /* width: 380px; */
    height: 80px;
    /* Verde Hud */
    border-radius: 52px;
}

.hallmark-btn-text {
    font-size: 19px;
    font-weight: 700;
    line-height: 26px;
    letter-spacing: 0.185em;
}

/* Section: Contact */

section#contact {
    height: 1000px;
}

.bg-contact-img {
    background-image: url('img/contact-bg.png');
    background-position: center;
    background-repeat: no-repeat; 
    background-size: cover; 
}

.bg-contact {
    background: linear-gradient(180deg, #1F263B 0%, #0A1B2A 57.41%, #051826 100%);
    /* transform: matrix(1, 0, 0, -1, 0, 0); */
}

.contact-wrapper {
    max-width: 1000px;
}

.contact-title {
    font-size: 55px;
    font-weight: 700;
    line-height: 88px;
    letter-spacing: -0.005em;
}

.contact-subtitle {
    font-size: 25px;
    font-weight: 500;
    line-height: 40px;
    letter-spacing: -0.005em;
}

.contact-form-label {
    font-size: 25px;
    font-weight: 500;
    line-height: 34px;
    letter-spacing: -0.005em;
}

.contact-form {
    height: 70vh;
    max-height: 800px;
}

.contact-form-control {
    width: 100%;
    height: 78px;

    background: #FFFFFF;
    /* Verde Hud */

    border: 6px solid #CDFF1A;
    /* Drop Shadow */

    box-shadow: 5.95712px 20px 29px rgba(0, 0, 0, 0.05);
    border-radius: 87px;
}

.contact-rectangle {
    max-width: 280px;
}

/* Bootstrap overriding */

.nav-item {
    font-style: normal;
    font-size: 18px;
    font-weight: 600;
    line-height: 27px;
    letter-spacing: 0.185em;
}

.nav-link:visited,
.nav-link:link {
  border-bottom: 2px solid transparent;
}

.nav-link:hover,
.nav-link:active {
  border-bottom: 2px solid #CDFF1A;
}

/* .card-body {
    padding: 38px !important;
} */

.card-title {
    font-size: 35px;
    font-weight: 700;
    line-height: 47px;
    letter-spacing: -0.005em;
    text-align: left;
}

.carousel-indicators {
    bottom: -90px !important;
}

.carousel-indicators [data-bs-target] {
    border-radius: 50% !important;
    width: 15px !important;
    height: 15px !important;
    opacity: 0.2 !important;
}

.carousel-indicators .active {
    opacity: 1 !important;
}

.carousel-item {
    height: 100% !important;
}

